--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<p>Hello World</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Image</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; margin-top: 20%; }
+    .loading { font-size: 20px; }
+    #image-container { display: none; }
+  </style>
+</head>
+<body>
+  <h1>Generating Your Image</h1>
+  <div class="loading">Please wait...</div>
+  <div id="image-container">
+    <img id="generated-image" style="max-width: 100%; height: auto;" />
+    <br />
+    <a id="download-link" href="#" download="generated_image.png">Download Image</a>
+  </div>
+
+  <script>
+    // Extract token from URL
+    const token = location.pathname.split('/').pop();
+
+    // Fetch the JSON data from the repository
+    fetch("data.json")
+      .then(response => response.json())
+      .then(data => {
+        const record = data[token];
+        if (record && record.status === "ready") {
+          document.querySelector(".loading").style.display = "none";
+          const imageContainer = document.getElementById("image-container");
+          const image = document.getElementById("generated-image");
+          const downloadLink = document.getElementById("download-link");
+
+          image.src = record.image_url;
+          downloadLink.href = record.image_url;
+
+          imageContainer.style.display = "block";
+        } else {
+          document.querySelector(".loading").textContent = "Image not ready or token invalid.";
+        }
+      })
+      .catch(error => {
+        console.error("Error fetching data:", error);
+        document.querySelector(".loading").textContent = "An error occurred. Please try again later.";
+      });
+  </script>
+</body>
+</html>
