--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Image</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Oswald', sans-serif;
@@ -32,7 +33,7 @@
     .loading-bar-container {
       width: 80%;
       height: 10px;
-      background-color: #333;
+      background-color: #ffffff;
       margin: 20px auto;
       border-radius: 5px;
       overflow: hidden;
@@ -41,12 +42,12 @@
     .loading-bar {
       width: 0;
       height: 100%;
-      background-color: #0f0;
+      background-color: #ffffff;
       transition: width 0.5s ease-in-out;
     }
 
     a {
-      color: #0f0;
+      color: #ffffff;
       text-decoration: none;
       font-size: 1.2em;
     }
