--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     .loading-bar {
       width: 0;
       height: 100%;
-      background-color: #0f0;
+      background-color: #0edda5;
       animation: loading 3s linear infinite; /* Smooth animation */
     }
 
@@ -71,7 +71,7 @@
       background-color: #ffffff;
       color: #203d65;
       padding: 10px 20px;
-      border-radius: 25px;
+      border-radius: 12px;
       text-decoration: none;
       font-size: 1.2em;
       display: inline-block;
