--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
       margin-top: 20px;
     }
 
-   #image-container {
-      display: flex; /* Use flex to center the content */
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    #image-container {
+      display: none;
       margin-top: 20px;
     }
+
     #generated-image {
-      max-width: 80%; /* Ensure the image fits well */
+      max-width: 50%; /* Smaller image for desktop screens */
       max-height: 500px; /* Limit height for large images */
       height: auto;
+      margin: 0 auto;
     }
 
     .loading-bar-container {
@@ -45,28 +44,28 @@
       margin: 20px auto;
       border-radius: 5px;
       overflow: hidden;
+      position: relative;
     }
 
     .loading-bar {
+      position: relative;
       width: 0;
       height: 100%;
       background-color: #0edda5;
-      animation: loading 3s linear infinite; /* Smooth animation */
+      transition: width 3s linear; /* Smooth bar animation */
     }
 
-    @keyframes loading {
-      0% {
-        left: -100%;
-        width: 100%;
-      }
-      50% {
-        left: 0;
-        width: 100%;
-      }
-      100% {
-        left: 100%;
-        width: 100%;
-      }
+    #rocket {
+      position: absolute;
+      top: -20px; /* Position rocket above the bar */
+      left: 0;
+      font-size: 1.5em; /* Size of the rocket emoji */
+      transition: transform 1s ease-in-out, left 0.5s linear;
+    }
+
+    .fly-out {
+      transform: translateY(-150px) scale(1.5); /* Rocket flies upward and grows */
+      opacity: 0; /* Rocket fades out */
     }
 
     a {
@@ -86,10 +85,12 @@
   </style>
 </head>
 <body>
-  <h1>We’re Cooking Your Image! 🍳</h1> <!-- Updated creative text -->
+  <h1>We’re Cooking Your Image! 🍳</h1>
   <div class="loading">Your image is on the way! Hang tight 🚀</div>
-  <div class="loading-bar-container">
-    <div class="loading-bar" id="loading-bar"></div>
+  <div class="loading-bar-container" id="loading-bar-container">
+    <div class="loading-bar" id="loading-bar">
+      <span id="rocket">🚀</span> <!-- Rocket emoji inside the bar -->
+    </div>
   </div>
   <div id="image-container">
     <img id="generated-image" />
@@ -103,12 +104,12 @@
   const token = location.pathname.split('/').pop();
 
   // Simulate loading bar progress
-  let progress = 0;
   const loadingBar = document.getElementById('loading-bar');
+  const rocket = document.getElementById('rocket');
   const interval = setInterval(() => {
-    if (progress < 100) {
-      progress += 10;
-      loadingBar.style.width = progress + '%';
+    if (loadingBar.offsetWidth / loadingBar.parentElement.offsetWidth < 1) {
+      loadingBar.style.width = (loadingBar.offsetWidth + 10) + '%';
+      rocket.style.left = loadingBar.offsetWidth + 'px'; // Move the rocket
     } else {
       clearInterval(interval);
     }
@@ -118,23 +119,36 @@
   fetch("https://raw.githubusercontent.com/maxcoutaz/ai-layer-generation/main/data.json")
     .then(response => response.json())
     .then(data => {
-      const record = data[`export_${token}`]; // Adjusting to the key structure in data.json
+      const record = data[`export_${token}`];
       console.log(record); // Log to check the fetched data
       if (record && record.status === "ready") {
         // Stop the loading bar
         clearInterval(interval);
         loadingBar.style.width = '100%';
+        rocket.style.left = '100%';
+
+        // Animate the rocket flying out
+        setTimeout(() => {
+          if (rocket) {
+            rocket.classList.add("fly-out");
+          }
+        }, 300);
+
+        // Wait for the rocket animation to finish, then hide the loading bar
+        setTimeout(() => {
+          const loadingBarContainer = document.getElementById("loading-bar-container");
+          if (loadingBarContainer) {
+            loadingBarContainer.style.display = "none";
+          }
+        }, 1500);
 
         // Update the heading text
         const heading = document.querySelector("h1");
         if (heading) heading.textContent = "Voilà! Your masterpiece is ready to shine 🎉";
 
-        // Hide loading text and loading bar
+        // Hide the loading text
         const loadingText = document.querySelector(".loading");
         if (loadingText) loadingText.style.display = "none";
-
-        const loadingBarContainer = document.getElementById("loading-bar-container");
-        if (loadingBarContainer) loadingBarContainer.style.display = "none";
 
         // Show the image and download link
         const imageContainer = document.getElementById("image-container");
@@ -142,11 +156,15 @@
         const downloadLink = document.getElementById("download-link");
 
         if (image) image.src = record.image_url; // Set the image source
-        if (downloadLink) downloadLink.href = record.image_url; // Set the download link
+
+        if (downloadLink) {
+          downloadLink.href = record.image_url; // Set the URL for the image
+          const filename = `generated_image_${token}.png`; // Create a dynamic filename
+          downloadLink.setAttribute("download", filename); // Set the download attribute
+        }
 
         if (imageContainer) imageContainer.style.display = "flex"; // Make the container visible
       } else {
-        // Handle case where the image is not ready
         const loadingText = document.querySelector(".loading");
         if (loadingText) loadingText.textContent = "Image not ready or token invalid.";
         clearInterval(interval);
@@ -154,7 +172,6 @@
       }
     })
     .catch(error => {
-      // Handle errors fetching the data
       console.error("Error fetching data:", error);
       const loadingText = document.querySelector(".loading");
       if (loadingText) loadingText.textContent = "An error occurred. Please try again later.";
