--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     }
 
     #image-container {
-      display: none;
+      display: flex;
+      flex-direction: column; /* Stack content vertically */
+      align-items: center; /* Center-align content horizontally */
       margin-top: 20px;
     }
 
@@ -69,18 +71,18 @@
     }
 
     a {
-      background-color: #ffffff;
-      color: #203d65;
+      background-color: ;
+      color: #203d65 0.2;
       padding: 10px 20px;
       border-radius: 12px;
       text-decoration: none;
       font-size: 1.2em;
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 20px auto;
     }
 
     a:hover {
-      background-color: #e6e6e6;
+      background-color:;
     }
   </style>
 </head>
