--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       position: absolute;
       top: -20px; /* Position rocket above the bar */
       left: 0;
-      font-size: 2em; /* Size of the rocket emoji */
+      font-size: 5em; /* Size of the rocket emoji */
       transition: transform 1s ease-in-out, left 10s linear;
     }
 
@@ -105,37 +105,26 @@
   // Extract token from URL
   const token = location.pathname.split('/').pop();
 
-  // Simulate loading bar progress
+  // Get references to the bar and rocket
   const loadingBar = document.getElementById('loading-bar');
-const rocket = document.getElementById('rocket');
+  const rocket = document.getElementById('rocket');
 
-// Start loading bar animation
-    loadingBar.style.width = '100%'; // Let the bar animation fill up to 100%
-    setTimeout(() => {
-      rocket.style.left = '100%'; // Move rocket to the end of the bar
-    }, 0); // No delay to start rocket movement
-    
-    // Animate the rocket flying out after the bar fills
-    setTimeout(() => {
-      if (rocket) {
-        rocket.classList.add("fly-out");
-      }
-    }, 10000); // Trigger fly-out after 10 seconds
-    
-    // Wait for the rocket animation to finish, then hide the loading bar
-    setTimeout(() => {
-      const loadingBarContainer = document.getElementById("loading-bar-container");
-      if (loadingBarContainer) {
-        loadingBarContainer.style.display = "none";
-      }
-    }, 11000); // Ensure fly-out finishes before hiding the bar
+  // Start loading bar animation
+  loadingBar.style.width = '100%'; // Let the bar animation fill up to 100%
+  setTimeout(() => {
+    rocket.style.left = '100%'; // Move rocket to the end of the bar
+  }, 0); // No delay to start rocket movement
 
-  // Fetch the JSON data from the correct repository
+  // Fetch the JSON data from the repository
   fetch("https://raw.githubusercontent.com/maxcoutaz/ai-layer-generation/main/data.json")
-    .then(response => response.json())
+    .then(response => {
+      if (!response.ok) {
+        throw new Error(`HTTP error! status: ${response.status}`);
+      }
+      return response.json();
+    })
     .then(data => {
       const record = data[`export_${token}`];
-      console.log(record); // Log to check the fetched data
       if (record && record.status === "ready") {
         // Stop the loading bar
         clearInterval(interval);
@@ -190,8 +179,6 @@ const rocket = document.getElementById('rocket');
       console.error("Error fetching data:", error);
       const loadingText = document.querySelector(".loading");
       if (loadingText) loadingText.textContent = "An error occurred. Please try again later.";
-      clearInterval(interval);
-      loadingBar.style.width = '0';
     });
 });
   </script>
