--- a/index.html
+++ b/index.html
@@ -26,23 +26,33 @@
     }
 
     #image-container {
-      display: flex;
-      flex-direction: column; /* Stack content vertically */
-      align-items: center; /* Center-align content horizontally */
+      display: none;
       margin-top: 20px;
     }
 
     #generated-image {
-      max-width: 50%; /* Smaller image for desktop screens */
+      max-width: 50%; /* Default for desktop */
       max-height: 500px; /* Limit height for large images */
       height: auto;
       margin: 0 auto;
     }
 
+    @media (max-width: 768px) { /* For devices with a max width of 768px (tablets and smaller) */
+      #generated-image {
+        max-width: 80%; /* Increase size for mobile */
+        margin-left: 10%; /* Add more left and right margin */
+        margin-right: 10%;
+      }
+
+      body {
+        padding: 0 5%; /* Increase body padding on mobile for a better layout */
+      }
+    }
+
     .loading-bar-container {
       width: 80%;
       height: 10px;
-      background-color:;
+      background-color: #ffffff;
       margin: 20px auto;
       border-radius: 5px;
       overflow: hidden;
@@ -50,19 +60,18 @@
     }
 
     .loading-bar {
-      position: relative;
       width: 0;
       height: 100%;
-      background-color:;
-      transition: width 10s linear; /* Smooth bar animation */
+      background-color: #0edda5;
+      transition: width 10s linear; /* Slow animation over 10 seconds */
     }
 
     #rocket {
       position: absolute;
       top: -20px; /* Position rocket above the bar */
       left: 0;
-      font-size: 5em; /* Size of the rocket emoji */
-      transition: transform 1s ease-in-out, left 10s linear;
+      font-size: 1.5em; /* Size of the rocket emoji */
+      transition: transform 1s ease-in-out, left 10s linear; /* Smooth movement */
     }
 
     .fly-out {
@@ -71,18 +80,18 @@
     }
 
     a {
-      background-color: #ffffff ;
+      background-color: #ffffff;
       color: #203d65;
       padding: 10px 20px;
       border-radius: 12px;
       text-decoration: none;
       font-size: 1.2em;
       display: inline-block;
-      margin-top: 20px auto;
+      margin-top: 20px;
     }
 
     a:hover {
-      background-color: #ffffff;
+      background-color: #e6e6e6;
     }
   </style>
 </head>
@@ -90,9 +99,8 @@
   <h1>We’re Cooking Your Image! 🍳</h1>
   <div class="loading">Your image is on the way! Hang tight 🚀</div>
   <div class="loading-bar-container" id="loading-bar-container">
-    <div class="loading-bar" id="loading-bar">
-      <span id="rocket">🚀</span> <!-- Rocket emoji inside the bar -->
-    </div>
+    <div class="loading-bar" id="loading-bar"></div>
+    <div id="rocket">🚀</div>
   </div>
   <div id="image-container">
     <img id="generated-image" />
@@ -102,93 +110,99 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-  // Extract token from URL
-  const token = location.pathname.split('/').pop();
+      // Extract token from URL
+      const token = location.pathname.split('/').pop();
 
-  // Get references to the bar and rocket
-  const loadingBar = document.getElementById('loading-bar');
-  const rocket = document.getElementById('rocket');
+      // Get references to the bar and rocket
+      const loadingBar = document.getElementById('loading-bar');
+      const rocket = document.getElementById('rocket');
 
-  // Simulate loading bar progress (interval logic)
-  let progress = 0;
-  const interval = setInterval(() => {
-    if (progress < 100) {
-      progress += 1; // Increment progress
-      loadingBar.style.width = `${progress}%`;
-      rocket.style.left = `${progress}%`; // Move the rocket with the bar
-    } else {
-      clearInterval(interval); // Stop the interval when progress is 100%
-    }
-  }, 100); // Update every 100ms for smooth animation
-
-  // Fetch the JSON data from the repository
-  fetch("https://raw.githubusercontent.com/maxcoutaz/ai-layer-generation/main/data.json")
-    .then(response => {
-      if (!response.ok) {
-        throw new Error(`HTTP error! status: ${response.status}`);
-      }
-      return response.json();
-    })
-    .then(data => {
-      const record = data[`export_${token}`];
-      if (record && record.status === "ready") {
-        // Stop the loading bar
-        clearInterval(interval);
-        loadingBar.style.width = '100%';
-        rocket.style.left = '100%';
-
-        // Animate the rocket flying out
-        setTimeout(() => {
-          if (rocket) {
-            rocket.classList.add("fly-out");
-          }
-        }, 300);
-
-        // Wait for the rocket animation to finish, then hide the loading bar
-        setTimeout(() => {
-          const loadingBarContainer = document.getElementById("loading-bar-container");
-          if (loadingBarContainer) {
-            loadingBarContainer.style.display = "none";
-          }
-        }, 1500);
-
-        // Update the heading text
-        const heading = document.querySelector("h1");
-        if (heading) heading.textContent = "Voilà! Your masterpiece is ready to shine 🎉";
-
-        // Hide the loading text
-        const loadingText = document.querySelector(".loading");
-        if (loadingText) loadingText.style.display = "none";
-
-        // Show the image and download link
-        const imageContainer = document.getElementById("image-container");
-        const image = document.getElementById("generated-image");
-        const downloadLink = document.getElementById("download-link");
-
-        if (image) image.src = record.image_url; // Set the image source
-
-        if (downloadLink) {
-          downloadLink.href = record.image_url; // Set the URL for the image
-          const filename = `generated_image_${token}.png`; // Create a dynamic filename
-          downloadLink.setAttribute("download", filename); // Set the download attribute
+      // Simulate loading bar progress
+      let progress = 0;
+      const interval = setInterval(() => {
+        if (progress < 100) {
+          progress += 1; // Increment progress
+          loadingBar.style.width = `${progress}%`;
+          rocket.style.left = `${progress}%`; // Move the rocket with the bar
+        } else {
+          clearInterval(interval); // Stop the interval when progress is 100%
         }
+      }, 100); // Update every 100ms for smooth animation
 
-        if (imageContainer) imageContainer.style.display = "flex"; // Make the container visible
-      } else {
-        const loadingText = document.querySelector(".loading");
-        if (loadingText) loadingText.textContent = "Image not ready or token invalid.";
-        clearInterval(interval);
-        loadingBar.style.width = '0';
-      }
-    })
-    .catch(error => {
-      console.error("Error fetching data:", error);
-      const loadingText = document.querySelector(".loading");
-      if (loadingText) loadingText.textContent = "An error occurred. Please try again later.";
-      clearInterval(interval);
-      loadingBar.style.width = '0';
+      // Fetch the JSON data from the repository
+      fetch("https://raw.githubusercontent.com/maxcoutaz/ai-layer-generation/main/data.json")
+        .then(response => {
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          return response.json();
+        })
+        .then(data => {
+          const record = data[`export_${token}`];
+          if (record && record.status === "ready") {
+            // Stop the loading bar
+            clearInterval(interval);
+            loadingBar.style.width = '100%';
+            rocket.style.left = '100%';
+
+            // Animate the rocket flying out
+            setTimeout(() => {
+              if (rocket) {
+                rocket.classList.add("fly-out");
+              }
+            }, 300);
+
+            // Wait for the rocket animation to finish, then hide the loading bar
+            setTimeout(() => {
+              const loadingBarContainer = document.getElementById("loading-bar-container");
+              if (loadingBarContainer) {
+                loadingBarContainer.style.display = "none";
+              }
+            }, 1500);
+
+            // Update the heading text
+            const heading = document.querySelector("h1");
+            if (heading) heading.textContent = "Voilà! Your masterpiece is ready to shine 🎉";
+
+            // Hide the loading text
+            const loadingText = document.querySelector(".loading");
+            if (loadingText) loadingText.style.display = "none";
+
+            // Show the image and download link
+            const imageContainer = document.getElementById("image-container");
+            const image = document.getElementById("generated-image");
+            const downloadLink = document.getElementById("download-link");
+
+            if (image) image.src = record.image_url; // Set the image source
+
+            if (downloadLink) {
+              downloadLink.href = record.image_url; // Set the URL for the image
+              const filename = `generated_image_${token}.png`; // Create a dynamic filename
+              downloadLink.setAttribute("download", filename); // Ensure the download attribute is set
+              downloadLink.addEventListener("click", (event) => {
+                event.preventDefault(); // Prevent default behavior
+                const anchor = document.createElement("a");
+                anchor.href = record.image_url;
+                anchor.download = filename;
+                anchor.click(); // Programmatically click the anchor to trigger download
+              });
+            }
+
+            if (imageContainer) imageContainer.style.display = "flex"; // Make the container visible
+          } else {
+            const loadingText = document.querySelector(".loading");
+            if (loadingText) loadingText.textContent = "Image not ready or token invalid.";
+            clearInterval(interval);
+            loadingBar.style.width = '0';
+          }
+        })
+        .catch(error => {
+          console.error("Error fetching data:", error);
+          const loadingText = document.querySelector(".loading");
+          if (loadingText) loadingText.textContent = "An error occurred. Please try again later.";
+          clearInterval(interval);
+          loadingBar.style.width = '0';
+        });
     });
-});
   </script>
-</body>
-</html>
+</body
