--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     }
 
     #image-container {
-      display: none;
-      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* Center everything inside the container */
     }
 
     #generated-image {
@@ -87,7 +88,8 @@
       text-decoration: none;
       font-size: 1.2em;
       display: inline-block;
-      margin-top: 20px;
+      margin: 20px auto; /* Ensure proper spacing */
+      text-align: center;
     }
 
     a:hover {
