--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     .loading-bar-container {
       width: 80%;
       height: 10px;
-      background-color: #ffffff;
+      background-color:;
       margin: 20px auto;
       border-radius: 5px;
       overflow: hidden;
@@ -63,7 +63,7 @@
     .loading-bar {
       width: 0;
       height: 100%;
-      background-color: #0edda5;
+      background-color:;
       transition: width 10s linear; /* Slow animation over 10 seconds */
     }
 
