--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     .loading-bar {
       width: 0;
       height: 100%;
-      background-color: #0edda5;
+      background-color: ;
       transition: width 10s linear; /* Slow animation over 10 seconds */
     }
 
