--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
 
     #image-container {
-      display: flex;
+      display: none;
       flex-direction: column;
       align-items: center; /* Center everything inside the container */
     }
@@ -52,8 +52,8 @@
 
     .loading-bar-container {
       width: 80%;
-      height: 10px;
-      margin: 20px auto;
+      height: 20px;
+      margin: 25px auto;
       border-radius: 5px;
       overflow: hidden;
       position: relative;
@@ -62,7 +62,6 @@
     .loading-bar {
       width: 0;
       height: 100%;
-      background-color: ;
       transition: width 10s linear; /* Slow animation over 10 seconds */
     }
 
@@ -114,6 +113,13 @@
       // Extract token from URL
       const token = location.pathname.split('/').pop();
 
+      if (!token || token === "/") {
+        // If no token is provided, display a default landing message
+        document.querySelector("h1").textContent = "Welcome! Submit a form to generate your image.";
+        document.querySelector(".loading").style.display = "none";
+        return;
+      }
+
       // Get references to the bar and rocket
       const loadingBar = document.getElementById('loading-bar');
       const rocket = document.getElementById('rocket');
@@ -141,6 +147,11 @@
         .then(data => {
           const record = data[`export_${token}`];
           if (record && record.status === "ready") {
+            // Redirect to unique token URL
+            const currentUrl = window.location.origin; // Get base URL
+            const tokenUrl = `${currentUrl}/${token}`; // Construct token-specific URL
+            window.location.href = tokenUrl; // Redirect
+
             // Stop the loading bar
             clearInterval(interval);
             loadingBar.style.width = '100%';
@@ -175,7 +186,6 @@
             const downloadLink = document.getElementById("download-link");
 
             if (image) image.src = record.image_url; // Set the image source
-
             if (downloadLink) {
               downloadLink.href = record.image_url; // Directly link to the full-sized image
               downloadLink.target = "_blank"; // Open in a new tab
